--- a/t/testset/bot/bot_misc.yaml
+++ b/t/testset/bot/bot_misc.yaml
@@ -198,3 +198,11 @@
   is_linux: false
   is_windows: false
   is_chromeos: false
+- ua: 'Hexometer'
+  name: 'Hexometer'
+  is_bot: true
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+  is_chromeos: false
