--- a/t/testset/http_client/http_clients.yaml
+++ b/t/testset/http_client/http_clients.yaml
@@ -257,6 +257,15 @@
   is_windows: false
   is_chromeos: false
   version: '2.22.0'
+- ua: 'Python/3.7 aiohttp/3.7.3'
+  name: 'aiohttp'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: flase
+  is_windows: false
+  is_chromeos: false
+  version: '3.7.3'
 - ua: 'MT::Plugin::BadLinkFinder/0.9'
   name: 'MT::Plugin::BadLinkFinder'
   is_bot: false
