--- a/t/testset/bot/log4shell.yaml
+++ b/t/testset/bot/log4shell.yaml
@@ -1,5 +1,5 @@
 - ua: '${jndi:rmi://example.com/foo}'
-  name: 'Log4J CVE-2021-45046'
+  name: 'Log4Shell'
   is_bot: true
   is_ios: false
   is_android: false
